# pdf-signer

./: .gitignore  README.md  backend.py  gui.py  i18n.py  main.py  pdf_signer.spec  pyproject.toml
.github/workflows/: release.yml
scripts/: build_icon.py
